 * Removed thinning from Gibbs and all MetropolisHastings classes
 * Removed burn-in from Gibbs and all MetropolisHastings classes except RandomWalkMetropolisHastings
 * RandomWalkMetropolisHastings::getRealization|Sample no longer remove states reached during burn-in
 * RandomWalkMetropolisHastings default adaptation parameters were changed to enable adaptation

=== Documentation ===
 * Add API documentation to common use cases pages

=== Python module ===

=== Miscellaneous ===
 * Add HypothesisTest::LikelihoodRatioTest for nested model selection
 * Add VisualTest::DrawPPplot
 * Add VisualTest.Draw(Upper|Lower)(Tail|Extremal)DependenceFunction methods to plot dependence functions
 * Add Distribution.compute(Upper|Lower)(Tail|Extremal)DependenceMatrix methods to compute dependence coefficients

=== Bug fixes ===
 * #2045 ([Debian] NLopt issues during tests on arm64, ppc64el, s390x)
 * #2046 ([Debian] DistFunc_binomial issues in tests on arm64 and ppc64el)
 * #2047 ([Debian] pythoninstallcheck_DistributionFactory_std issues on arm64, armel, armhf, mips64el)
 * #2153 (HSIC computation cost)
 * #2185 (Error: no member named '__1' in namespace 'std' ARM64 Android Termux)
 * #2193 (Tiny spelling issues)
 * #2194 (SubsetSampling: bug in 1.15)
 * #2200 (out of bound probas)
 * #2204 (Build fails with primesieve-11.0)
 * #2205 (Edges of a PolygonArray)
 * #2206 (Only Contour legends are shown in a graph mixing Contour and other Drawable (Curve, Cloud,...))
 * #2209 (The Felhberg algorithm can fail, sometimes)
 * #2210 (Python Domain.getImplementation does not work)
 * #2213 (Some script fails)
 * #2229 (Unary minus for distribution)
 * #2240 (The Viewer sometimes fail)
 * #2250 (HSIC Target sensitivity bad filtering)
 * #2252 (The examples of calibration are difficult to understand)
 * #2255 (The description of a Distribution is wrong)
 * #2268 (MeixnerDistribution: slow pdfgradient)
 * #2274 (Basis accepts functions with different input (output) dimensions)