@@ -65,7 +65,7 @@ int main(int, char *[])
 
     // Creation of the BoxCoxTransform using shift with graph
     Graph graph;
-    BoxCoxTransform myBoxCoxShiftGraph(factory.build(timeSeries, shift, graph));
+    BoxCoxTransform myBoxCoxShiftGraph(factory.buildWithGraph(timeSeries, shift, graph));
 
     fullprint << "BoxCox graph (time-series)=" << graph << std::endl;
 
